--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "formik": "^2.4.2",
     "js-query-builder": "^0.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
