--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "formik": "^2.4.2",
     "js-query-builder": "^0.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
