--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^13.0.2",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-select-async-paginate": "^0.7.3",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.63.6",
+    "swiper": "^10.2.0",
     "vite-jsconfig-paths": "^2.0.1",
     "yup": "^1.2.0"
   },
